--- a/notebooks/ex03_combine_three_series.ipynb
+++ b/notebooks/ex03_combine_three_series.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "f9b79835-51ef-4edc-86f7-047e36526942",
    "metadata": {},
    "outputs": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "09bc2f12-91a8-42f5-9b1b-be30e0c47d31",
    "metadata": {},
    "outputs": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "6437eb50-155e-41ec-8913-3772e027ac7b",
    "metadata": {},
    "outputs": [
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "b64f2b29-734c-4563-98ce-5e0e6453ce35",
    "metadata": {},
    "outputs": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "9c539e29-0c9d-49dc-a061-00822e409efe",
    "metadata": {},
    "outputs": [
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "9da839b8-2fcf-46b2-941b-1689d76b7f8a",
    "metadata": {},
    "outputs": [
@@ -228,6 +228,18 @@
     "df = pd.concat([emps_names, emps_emails, emps_phones, emps_locations], axis = 1)\n",
     "\n",
     "print(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "a07595a4-2874-4797-9b43-8fa9d1d3d780",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save to File for later use\n",
+    "\n",
+    "df.to_csv(\"ex03_emps_df.csv\")"
    ]
   }
  ],
