feat: last example on mysql

--- a/notebooks/sn02_relational_databases.ipynb
+++ b/notebooks/sn02_relational_databases.ipynb
@@ -610,6 +610,103 @@
     "    cursor.close()\n",
     "    conn.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "eeb321c2-e048-44e6-abb5-717a325d03cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_28/3778911844.py:27: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  df_stocks = pd.read_sql(query, con=conn)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>price</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ticker</th>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [price]\n",
+       "Index: []"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "query = '''\n",
+    "SELECT\n",
+    "\ts.*\n",
+    "FROM\n",
+    "\tstocks AS s\n",
+    "\tLEFT JOIN ( SELECT DISTINCT\n",
+    "\t\t\t(ticker)\n",
+    "\t\tFROM (\n",
+    "\t\t\tSELECT\n",
+    "\t\t\t\tprice / LAG(price) OVER (PARTITION BY ticker ORDER BY date) AS dif,\n",
+    "\t\t\t\tticker\n",
+    "\t\t\tFROM\n",
+    "\t\t\t\tstocks) AS b\n",
+    "\t\tWHERE\n",
+    "\t\t\tdif < 0.99) AS a ON a.ticker = s.ticker\n",
+    "WHERE\n",
+    "\ta.ticker IS NULL\n",
+    "'''\n",
+    "\n",
+    "try:\n",
+    "    conn = new_conn()\n",
+    "    cursor = conn.cursor()\n",
+    "\n",
+    "\n",
+    "    df_stocks = pd.read_sql(query, con=conn)\n",
+    "    df_stocks = df_stocks.set_index(['ticker', 'date'])\n",
+    "    display(df_stocks)\n",
+    "except mysql.connector.Error as err:\n",
+    "    print('MySQL Error')\n",
+    "    print('(Code: {}) {}'.format(err.errno, err.msg))\n",
+    "finally:\n",
+    "    cursor.close()\n",
+    "    conn.close()"
+   ]
   }
  ],
  "metadata": {
